--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ node_modules/
 /.pnp
 .pnp.js
 
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
 # Environment variables
 .env
 .env.local
@@ -10,25 +17,21 @@ node_modules/
 .env.test.local
 .env.production.local
 
-# Build files
-/build
-/dist
-
-# Debug logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE files
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 
-# Upload directory
-/uploads 
-node_modules
+# Project specific
+/uploads
+*.pdf
