--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-pdf/renderer": "^4.3.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "tailwindcss": "^3.3.5",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "tailwindcss": "^3.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,4 +39,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
